--- a/quarto/derivatives/lhospitals_rule.qmd
+++ b/quarto/derivatives/lhospitals_rule.qmd
@@ -28,17 +28,17 @@ We know this is $1$ using a bound from geometry, but might also guess this is on
 
 
 $$
-\sin(x) = x - \sin(\xi)x^2/2, \quad 0 < \xi < x.
+\sin(x) = x - \sin(\xi)\frac{x^2}{2}, \quad 0 < \xi < x.
 $$
 
 This would yield:
 
 
 $$
-\lim_{x \rightarrow 0} \frac{\sin(x)}{x} = \lim_{x\rightarrow 0} \frac{x -\sin(\xi) x^2/2}{x} = \lim_{x\rightarrow 0} 1 - \sin(\xi) \cdot x/2 = 1.
+\lim_{x \rightarrow 0} \frac{\sin(x)}{x} = \lim_{x\rightarrow 0} \frac{x -\sin(\xi) \frac{x^2}{2}}{x} = \lim_{x\rightarrow 0} 1 - \sin(\xi) \cdot \frac{x}{2} = 1.
 $$
 
-This is because we know $\sin(\xi) x/2$  has a limit of $0$, when $|\xi| \leq |x|$.
+This is because we know $\sin(\xi) \frac{x}{2}$  has a limit of $0$, when $|\xi| \leq |x|$.
 
 
 That doesn't look any easier, as we worried about the error term, but if just mentally replaced $\sin(x)$ with $x$ - which it basically is near $0$ - then we can see that the limit should be the same as $x/x$ which we know is $1$ without thinking.
@@ -384,10 +384,10 @@ the first equality by L'Hospital's rule, as the second limit exists.
 Indeterminate forms of the type $0 \cdot \infty$, $0^0$, $\infty^\infty$, $\infty - \infty$ can be re-expressed to be in the form $0/0$ or $\infty/\infty$ and then L'Hospital's theorem can be applied.
 
 
-###### Example: rewriting $0 \cdot \infty$
+##### Example: rewriting $0 \cdot \infty$
 
 
-What is the limit $x \log(x)$ as $x \rightarrow 0+$? The form is $0\cdot \infty$, rewriting, we see this is just:
+What is the limit of $x \log(x)$ as $x \rightarrow 0+$? The form is $0\cdot \infty$, rewriting, we see this is just:
 
 
 $$
@@ -401,10 +401,10 @@ $$
 \lim_{x \rightarrow 0+}\frac{1/x}{-1/x^2} = \lim_{x \rightarrow 0+} -x = 0.
 $$
 
-###### Example: rewriting $0^0$
+##### Example: rewriting $0^0$
 
 
-What is the limit $x^x$ as $x \rightarrow 0+$? The expression is of the form $0^0$, which is indeterminate. (Even though floating point math defines the value as $1$.) We can rewrite this by taking a log:
+What is the limit of $x^x$ as $x \rightarrow 0+$? The expression is of the form $0^0$, which is indeterminate. (Even though floating point math defines the value as $1$.) We can rewrite this by taking a log:
 
 
 $$
