--- a/quarto/derivatives/newtons_method.qmd
+++ b/quarto/derivatives/newtons_method.qmd
@@ -413,7 +413,7 @@ To machine tolerance the answer is a zero, even though the exact answer is irrat
 
 The first example by Newton of applying the method to a non-polynomial function was solving an equation from astronomy: $x - e \sin(x) = M$, where $e$ is an eccentric anomaly and $M$ a mean anomaly. Newton used polynomial approximations for the trigonometric functions, here we can solve directly.
 
-Let $e = 1/2$ and $M = 3/4$. With $f(x) = x - e\sin(x) - M$ then $f'(x) = 1 - e cos(x)$. Starting at 1, Newton's method for 3 steps becomes:
+Let $e = 1/2$ and $M = 3/4$. With $f(x) = x - e\sin(x) - M$ then $f'(x) = 1 - e \cos(x)$. Starting at 1, Newton's method for 3 steps becomes:
 
 ```{julia}
 ec, M = 0.5, 0.75
@@ -490,7 +490,7 @@ $$
 x_{i+1} = x_i - (1/x_i - q)/(-1/x_i^2) = -qx^2_i + 2x_i.
 $$
 
-Now for $q$ in the interval $[1/2, 1]$ we want to get a *good* initial guess. Here is a claim. We can use $x_0=48/17 - 32/17 \cdot q$. Let's check graphically that this is a reasonable initial approximation to $1/q$:
+Now for $q$ in the interval $[1/2, 1]$ we want to get a *good* initial guess. Here is a claim: we can use $x_0=48/17 - 32/17 \cdot q$. Let's check graphically that this is a reasonable initial approximation to $1/q$:
 
 
 ```{julia}
@@ -865,7 +865,7 @@ The function $f(x) = x^{20} - 1$ has two bad behaviours for Newton's
 method: for $x < 1$ the derivative is nearly $0$ and for $x>1$ the
 second derivative is very big. In this illustration, we have an
 initial guess of $x_0=8/9$. As the tangent line is fairly flat, the
-next approximation is far away, $x_1 = 1.313\dots$. As this guess 
+next approximation is far away, $x_1 = 1.313\dots$. As this guess
 is much bigger than $1$, the ratio $f(x)/f'(x) \approx
 x^{20}/(20x^{19}) = x/20$, so $x_i - f(x_i)/f'(x_i) \approx (19/20)x_i$
 yielding slow, linear convergence until $f''(x_i)$ is moderate. For
