--- a/quarto/differentiable_vector_calculus.qmd
+++ b/quarto/differentiable_vector_calculus.qmd
@@ -1,3 +1,7 @@
+---
+engine: julia
+---
+
 # Differential vector calculus
 
 This section discussions generalizations of the derivative to functions which have more than one input and/or one output.
