--- a/quarto/integrals/arc_length.qmd
+++ b/quarto/integrals/arc_length.qmd
@@ -95,11 +95,11 @@ function make_arclength_graph(n)
 
 	ts = range(0, 2pi, 100)
 
-	λ = 0.005
-	cs = [λ .* xys for xys ∈ sincos.(ts)]
+	λ = 0.01
+    C = Plots.scale(Shape(:circle), λ)
 
-	for v ∈ zip(x.(pttn), y.(pttn))
-		S = Shape([v .+ xy for xy in cs])
+	for (u,v) ∈ zip(x.(pttn), y.(pttn))
+        S = Plots.translate(C, u,v)
 		plot!(S; fill=(:white,), line=(:black,2))
 	end
 
@@ -555,7 +555,9 @@ plot(t -> g(𝒔(t)), t -> f(𝒔(t)), 0, sinv(2*pi))
 Following (faithfully) [Kantorwitz and Neumann](https://www.researchgate.net/publication/341676916_The_English_Galileo_and_His_Vision_of_Projectile_Motion_under_Air_Resistance), we consider a function $f(x)$ with the property that **both** $f$ and $f'$ are strictly concave down on $[a,b]$ and suppose $f(a) = f(b)$. Further, assume $f'$ is continuous. We will see this implies facts about arc-length and other integrals related to $f$.
 
 
-The following figure is clearly of a concave down function. The asymmetry about the critical point will be seen to be a result of the derivative also being concave down. This asymmetry will be characterized in several different ways in the following including showing that the arc length from $(a,0)$ to $(c,f(c))$ is longer than from $(c,f(c))$ to $(b,0)$.
+@fig-kantorwitz-neumann is clearly of a concave down function. The asymmetry about the critical point will be seen to be a result of the derivative also being concave down. This asymmetry will be characterized in several different ways in the following including showing that the arc length from $(a,0)$ to $(c,f(c))$ is longer than from $(c,f(c))$ to $(b,0)$.
+
+::: {#@fig-kantorwitz-neumann}
 
 
 ```{julia}
@@ -590,7 +592,12 @@ plot!(zero)
 annotate!([(0, 𝒚, "a"), (152, 𝒚, "b"), (u, 𝒚, "u"), (v, 𝒚, "v"), (c, 𝒚, "c")])
 ```
 
-Take $a < u < c < v < b$ with $f(u) = f(v)$ and $c$ a critical point, as in the picture. There must be a critical point by Rolle's theorem, and it must be unique, as the derivative, which exists by the assumptions, must be strictly decreasing due to concavity of $f$ and hence there can be at most $1$ critical point.
+Graph of function $f(x)$ with both $f$ and $f'$ strictly concave down.
+:::
+
+By Rolle's theorem there exists $c$ in $(a,b)$, a critical point, as in the picture. There must be a critical point by Rolle's theorem, and it must be unique, as the derivative, which exists by the assumptions, must be strictly decreasing due to concavity of $f$ and hence there can be at most $1$ critical point.
+
+Take $a < u < c < v < b$ with $f(u) = f(v)$.
 
 
 Some facts about this picture can be proven from the definition of concavity:
@@ -653,7 +660,7 @@ By the fundamental theorem of calculus:
 
 
 $$
-(f_1^{-1}(y) + f_2^{-1}(y))\big|_\alpha^\beta > 0
+(f_1^{-1}(y) + f_2^{-1}(y))\Big|_\alpha^\beta > 0
 $$
 
 On rearranging:
