--- a/quarto/integrals/area_between_curves.qmd
+++ b/quarto/integrals/area_between_curves.qmd
@@ -32,7 +32,7 @@ can be interpreted as the "signed" area between $f(x)$ and $g(x)$ over $[a,b]$. 
 ```{julia}
 #| hold: true
 #| echo: false
-#| label: fig-area-between-f-g
+#| label: fig-area-between-f-g-shade
 #| fig-cap: "Area between two functions"
 f1(x) = x^2
 g1(x) = sqrt(x)
@@ -626,7 +626,6 @@ Each term describes the area of a trapezoid, possibly signed.
 This figure illustrates for a simple case:
 
 ```{julia}
-using Plots
 xs = [1, 3, 4, 2, 1]  # n = 4 to give 5=n+1 values
 ys = [1, 1, 2, 3, 1]
 p = plot(xs, ys; line=(3, :black), ylims=(0,4), legend=false)
