--- a/quarto/integrals/partial_fractions.qmd
+++ b/quarto/integrals/partial_fractions.qmd
@@ -14,7 +14,9 @@ using SymPy
 Integration is facilitated when an antiderivative for $f$ can be found, as then definite integrals can be evaluated through the fundamental theorem of calculus.
 
 
-However, despite differentiation being an algorithmic procedure, integration is not. There are "tricks" to try, such as substitution and integration by parts. These work in some cases. However, there are classes of functions for which algorithms exist. For example, the `SymPy` `integrate` function mostly implements an algorithm that decides if an elementary function has an antiderivative. The [elementary](http://en.wikipedia.org/wiki/Elementary_function) functions include exponentials, their inverses (logarithms), trigonometric functions, their inverses, and powers, including $n$th roots. Not every elementary function will have an antiderivative comprised of (finite) combinations of elementary functions. The typical example is $e^{x^2}$, which has no simple antiderivative, despite its ubiquitousness.
+However, despite differentiation being an algorithmic procedure, integration is not. There are "tricks" to try, such as substitution and integration by parts. These work in some cases--but not all!
+
+However, there are classes of functions for which algorithms exist. For example, the `SymPy` `integrate` function mostly implements an algorithm that decides if an elementary function has an antiderivative. The [elementary](http://en.wikipedia.org/wiki/Elementary_function) functions include exponentials, their inverses (logarithms), trigonometric functions, their inverses, and powers, including $n$th roots. Not every elementary function will have an antiderivative comprised of (finite) combinations of elementary functions. The typical example is $e^{x^2}$, which has no simple antiderivative, despite its ubiquitousness.
 
 
 There are classes of functions where an (elementary) antiderivative can always be found. Polynomials provide a case. More surprisingly, so do their ratios, *rational functions*.
@@ -238,7 +240,11 @@ $$
 #### Examples
 
 
-Find an antiderivative for $1/(x\cdot(x^2+1)^2)$.
+Find an antiderivative for
+
+$$
+\frac{1}{x\cdot(x^2+1)^2}.
+$$
 
 
 We have a partial fraction decomposition is:
@@ -259,7 +265,11 @@ integrate(1/q, x)
 ---
 
 
-Find an antiderivative of $1/(x^2 - 2x-3)$.
+Find an antiderivative of
+
+$$
+\frac{1}{x^2 - 2x-3}.
+$$
 
 
 We again just let `SymPy` do the work. A partial fraction decomposition is given by:
