--- a/quarto/precalc.qmd
+++ b/quarto/precalc.qmd
@@ -1,3 +1,7 @@
+---
+engine: julia
+---
+
 # Precalculus Concepts
 
 The mathematical topics in this chapter come from pre-calculus. However, much of the `Julia` usage needed for the rest of the notes are introduced.
