--- a/quarto/precalc/numbers_types.qmd
+++ b/quarto/precalc/numbers_types.qmd
@@ -165,7 +165,7 @@ Integers are often used casually, as they come about from parsing. As with a cal
 
 As per IEEE Standard 754, the `Float64` type gives 52 bits to the precision (with an additional implied one), 11 bits to the exponent and the other bit is used to represent the sign.  Positive, finite, floating point numbers have a range approximately between $10^{-308}$ and $10^{308}$, as 308 is about $\log_{10} 2^{1023}$. The numbers are not evenly spread out over this range, but, rather, are much more concentrated closer to $0$.
 
-The use of 32-bit floating point values is common, as some widley used computer chips expect this. These values have a narrower range of possible values.
+The use of 32-bit floating point values is common, as some widely used computer chips expect this. These values have a narrower range of possible values.
 
 :::{.callout-warning}
 ## More on floating point numbers
@@ -403,6 +403,42 @@ When learning calculus, the only common usage of complex numbers arises when sol
 Though complex numbers are stored as pairs of numbers, the imaginary unit, `im`, is of type `Complex{Bool}`, a type that can be promoted to more specific types when `im` is used with different number types.
 
 :::
+
+### Strings and symbols
+
+For text, `Julia` has a `String` type. When double quotes are used to specify a string, the parser creates this type:
+
+```{julia}
+x = "The quick brown fox jumped over the lazy dog"
+typeof(x)
+```
+
+Values can be inserted into a string through *interpolation* using a dollar sign.
+
+```{julia}
+animal = "lion"
+x = "The quick brown $(animal) jumped over the lazy dog"
+```
+
+The use of parentheses allows more complicated expressions; it isn't always necessary.
+
+Longer strings can be produced using *triple* quotes:
+
+```{julia}
+lincoln = """
+Four score and seven years ago our fathers brought forth, upon this continent, a new nation, conceived in Liberty, and dedicated to the proposition that all men are created equal.
+"""
+```
+
+Strings are comprised of *characters* which can be produced directly using *single* quotes:
+
+```{julia}
+'c'
+```
+
+We won't use these.
+
+Finally, `Julia` has *symbols* which are *interned* strings which are used as identifiers. Symbols are used for advanced programming techniques; we will only see them as shortcuts to specify plotting arguments.
 
 ## Type stability
 
