--- a/quarto/precalc/rational_functions.qmd
+++ b/quarto/precalc/rational_functions.qmd
@@ -15,7 +15,7 @@ import Polynomials
 using RealPolynomialRoots
 ```
 
-The `Polynomials` package is "imported" to avoid naming collisions with `SymPy`; names will need to be qualified.
+The `Polynomials` package is "imported" to avoid naming collisions with `SymPy`;some names may need to be qualified.
 
 
 
@@ -410,7 +410,7 @@ The usual recipe for construction follows these steps:
   * Identify "test points" within each implied interval (these are $(-\infty, -1)$, $(-1,0)$, $(0,1)$, and $(1, \infty)$ in the example) and check for the sign of $f(x)$ at these test points. Write in `-`, `+`, `0`, or `*`, as appropriate. The value comes from the fact that "continuous" functions may only change sign when they cross $0$ or are undefined.
 
 
-With the computer, where it is convenient to draw a graph, it might be better to emphasize the sign on the graph of the function. The `sign_chart` function from `CalculusWithJulia` does this by numerically identifying points where the function is $0$ or $\infty$ and indicating the sign as $x$ crosses over these points.
+With the computer, where it is convenient to draw a graph, it might be better to emphasize the sign on the graph of the function, but at times numeric values are preferred. The `sign_chart` function from `CalculusWithJulia` does this analysis by numerically identifying points where the function is $0$ or $\infty$ and indicating the sign as $x$ crosses over these points.
 
 
 ```{julia}
@@ -418,6 +418,8 @@ With the computer, where it is convenient to draw a graph, it might be better to
 f(x) = x^3 - x
 sign_chart(f, -3/2, 3/2)
 ```
+
+This format is a bit different from above, but shows to the left of $-1$ a minussign; between $-1$ and $0$ a plus sign; between $0$ and $1$ a minus sign; and between $1$ and $3/2$ a plus sign.
 
 ## Pade approximate
 
