--- a/quarto/precalc/transformations.qmd
+++ b/quarto/precalc/transformations.qmd
@@ -220,7 +220,7 @@ Scaling by $2$ shrinks the non-zero domain, scaling by $1/2$ would stretch it. I
 ---
 
 
-More exciting is what happens if we combine these operations.
+More exciting is what happens if we compose these operations.
 
 
 A shift right by $2$ and up by $1$ is achieved through
@@ -267,7 +267,7 @@ We can view this as a composition of "scale" by $1/a$, then  "over" by $b$,  and
 #| hold: true
 a = 2; b = 5
 h(x) = stretch(over(scale(f, 1/a), b), 1/a)(x)
-plot(f, -1, 8, label="f")
+plot(f, -1, 8, label="f"; xticks=-1:8)
 plot!(h, label="h")
 ```
 
